mool/tests/compile/fail/write_type_mismatch.stderr
error[E0277]: the trait bound `Expr<std::string::String>: IntoExpr<i64>` is not satisfied
  --> tests/compile/fail/write_type_mismatch.rs:14:25
   |
14 |         .set(&posts.id, db::val("wrong".to_string()));
   |          ---            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `IntoExpr<i64>` is not implemented for `Expr<std::string::String>`
   |          |
   |          required by a bound introduced by this call
   |
   = help: the trait `IntoExpr<i64>` is not implemented for `Expr<std::string::String>`
           but trait `IntoExpr<std::string::String>` is implemented for it
   = help: for that trait implementation, expected `std::string::String`, found `i64`
note: required by a bound in `queries::executables::write::<impl mool::queries::Update<&'a T>>::set`
  --> src/queries/executables/write.rs
   |
   |     pub fn set<V>(self, column: &Column<V>, expr: impl IntoExpr<V>) -> Update<WriteValues<'a, T>> {
   |                                                        ^^^^^^^^^^^ required by this bound in `queries::executables::write::<impl Update<&T>>::set`
